; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/formats/libchdr/extr_libchdr_bitstream.c_bitstream_read_offset.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/formats/libchdr/extr_libchdr_bitstream.c_bitstream_read_offset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bitstream = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bitstream_read_offset(%struct.bitstream* %0) #0 {
  %2 = alloca %struct.bitstream*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.bitstream* %0, %struct.bitstream** %2, align 8
  %5 = load %struct.bitstream*, %struct.bitstream** %2, align 8
  %6 = getelementptr inbounds %struct.bitstream, %struct.bitstream* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  store i32 %7, i32* %3, align 4
  %8 = load %struct.bitstream*, %struct.bitstream** %2, align 8
  %9 = getelementptr inbounds %struct.bitstream, %struct.bitstream* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  store i32 %10, i32* %4, align 4
  br label %11

11:                                               ; preds = %14, %1
  %12 = load i32, i32* %4, align 4
  %13 = icmp sge i32 %12, 8
  br i1 %13, label %14, label %19

14:                                               ; preds = %11
  %15 = load i32, i32* %3, align 4
  %16 = add nsw i32 %15, -1
  store i32 %16, i32* %3, align 4
  %17 = load i32, i32* %4, align 4
  %18 = sub nsw i32 %17, 8
  store i32 %18, i32* %4, align 4
  br label %11

19:                                               ; preds = %11
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
